<resources>
    <string name="app_name">"App de Manillas "</string>
    <string name="xyz">XYZ</string>
    <string name="cantidad">Cantidad</string>
    <string name="moneda">Moneda</string>
    <string name="radio1">Pesos</string>
    <string name="dolar">Dolares</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Precio a pagar</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="oro">Oro</string>
    <string name="oroRosado">Oro rosado</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string-array name="materiales">
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>
    <string-array name="dije">
        <item>@string/ancla</item>
        <item>@string/martillo</item>
    </string-array>
    <string-array name="tipo">
        <item>@string/oro</item>
        <item>@string/oroRosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>
</resources>
