<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.taller2.Principal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginTop="107dp">

    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:text="@string/xyz" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|number"
            android:ems="10"
            android:id="@+id/txtCantidad"
            android:hint="@string/cantidad" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbMaterial"
            android:layout_weight="0.11" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbDije"
            android:layout_weight="0.18" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbTipo"
            android:layout_weight="0.18" />

        <TextView
            android:text="@string/moneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="0.08"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="46dp" >

            <RadioButton
                android:text="@string/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio1"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:text="@string/dolar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio2"
                android:layout_weight="1" />

        </RadioGroup>

        <Button
            android:text="@string/calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="calcular" />

        <TextView
            android:text="@string/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtResultado"
            android:textSize="30sp"
            android:textAlignment="center" />

    </LinearLayout>

</RelativeLayout>
